# swiss-public-transport-mcp

./: .gitignore  BRIEF.md  LICENSE  README.md  SPEC.md  pyproject.toml  server.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: probe.py
src/swiss_public_transport_mcp/: __init__.py  __main__.py  formatters.py  models.py  service.py  tools.py
src/swiss_public_transport_mcp/clients/: base.py  opendata.py
src/swiss_transport_mcp/: __main__.py  errors.py  formatters.py  service.py  tools.py
src/swiss_transport_mcp/clients/: base.py  opendata.py
tests/: conftest.py  test_formatters.py  test_opendata_client.py  test_service.py  test_tools.py
