[project]
name = "swiss-public-transport-mcp"
dynamic = ["version"]
description = "MCP server for Swiss public transport — connections, stationboards, and real-time delays"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp>=1.13.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[project.scripts]
swiss-public-transport-mcp = "swiss_public_transport_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/swiss_public_transport_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_public_transport_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "respx>=0.22.0",
]
